--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   provider: ^6.0.0
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
+  cached_network_image: ^3.2.0
 
 dev_dependencies:
   flutter_test:
